--- a/es-ds-styles/scss/mixins/_buttons.scss
+++ b/es-ds-styles/scss/mixins/_buttons.scss
@@ -51,7 +51,7 @@
     color: $text-color;
     @include gradients.gradient-bg($focus-background);
     border-color: $focus-background;
-    box-shadow: 0 0 0 2px $focus-border, $box-shadow;
+    box-shadow: 0 0 0 1px $focus-border, $box-shadow;
   }
 
   // Disabled comes first so active can properly restyle
@@ -102,10 +102,11 @@
 
   $focus-background: map.get(variables.$button-hover-colors, $outline-variant);
   $focus-border: map.get(variables.$button-focus-border-colors, $outline-variant);
+  $focus-outline-box-shadow-color: map.get(variables.$button-focus-outline-box-shadow-colors, $outline-variant);
 
   $disabled-font-color: map.get(variables.$button-disabled-font-colors, $outline-variant);
 
-  $box-shadow: map.get(variables.$button-box-shadows, $variant);
+  $box-shadow: map.get(variables.$button-box-shadows, $outline-variant);
   $active-box-shadow: map.get(variables.$button-active-box-shadows, $variant);
 
   color: $color;
@@ -124,8 +125,8 @@
   &.focus {
     color: $focus-border;
     @include gradients.gradient-bg($focus-background);
-    border-color: $focus-background;
-    box-shadow: 0 0 0 2px $focus-border, $box-shadow;
+    border-color: $focus-border;
+    box-shadow: 0 0 0 1px $focus-outline-box-shadow-color, $box-shadow;
   }
 
   &:disabled,
